# playground

./: .gitignore  README.md
android/DisplayP3ImageView/: README.md
android/DisplayP3ImageView/app/: build.gradle
android/apt-codelab/endless-tunnel/: gradle.properties
android/apt-codelab/endless-tunnel/app/: build.gradle
android/apt-codelab/endless-tunnel/app/release/: output-metadata.json
android/apt-codelab/gamesdk/: readme.txt
android/asm/app/: CMakeLists.txt  build.gradle
android/asm/app/src/main/: AndroidManifest.xml
android/asm/gradle/wrapper/: gradle-wrapper.properties
android/audio/recording/app/: build.gradle
android/audio/sine_wave/app/: build.gradle
android/audio/sine_wave/app/src/main/cpp/: CMakeLists.txt  PlaySine.cpp
android/camera/camerax/: build.gradle  settings.gradle
android/camera/camerax-cam-selector/: build.gradle  settings.gradle
android/camera/camerax-cam-selector/app/: build.gradle
android/camera/camerax-cam-selector/gradle/wrapper/: gradle-wrapper.properties
android/camera/camerax-codelab/CameraXApp/: settings.gradle
android/camera/camerax-codelab/CameraXApp/app/: build.gradle
android/camera/camerax-codelab2/CameraXApp/: settings.gradle
android/camera/camerax/camerax-lib/: build.gradle
android/camera/camerax/device-selector/: build.gradle
android/camera/camerax/java-app/: build.gradle
android/camera/camerax/preview-view/: build.gradle
android/camera/camerax/video-quality-listview/: build.gradle
android/camera/surface-view/: build.gradle
android/camera/texture-view/: README.md  build.gradle  settings.gradle
android/camera/texture-view/textureview/: build.gradle
android/camera/textureView/app/: build.gradle
android/camera/tmp/: build.gradle  settings.gradle
android/camera/tmp/app/: build.gradle
android/games/gamesdk/: README.md
android/games/gamesdk/GameActivity/: gradle.properties  settings.gradle  update_aar.sh
android/games/gamesdk/GameActivity/app/: build.gradle
android/games/gamesdk/GameActivity/app/src/main/cpp/: CMakeLists.txt  GameActivityApp.cpp  GameActivityInternalSources.cpp  GameActivitySources.cpp  NativeGlueWrapper.c  main.cpp
android/games/gamesdk/GameActivity/template/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  native-lib.cpp
android/games/gamesdk/GameTextInputJava/: settings.gradle
android/games/gamesdk/GameTextInputJava/app/src/main/cpp/: CMakeLists.txt  GameTextInput.cpp  TextInputLib-src.cpp
android/games/gamesdk/NativeToGameMigration/: build.gradle  gradle.properties
android/games/gamesdk/NativeToGameMigration/app/src/main/cpp/: CMakeLists.txt  game-activity-src.cpp  main.cpp
android/gsi/nightly-build/: readme.txt
android/jni-bp/round-trip/app/: build.gradle
android/kotlin/: build.gradle  settings.gradle
android/kotlin/gradle/wrapper/: gradle-wrapper.properties
android/kotlin/intents/: settings.gradle
android/kotlin/intents/app/: build.gradle
android/kotlin/recyclerView/: settings.gradle
android/kotlin/recyclerView2/: build.gradle  settings.gradle
android/kotlin/recyclerView2/app/: build.gradle
android/kotlin/recyclerview1/: build.gradle
android/kotlin/sandbox/: build.gradle
android/native-plasma/app/: build.gradle
android/native-plasma/libwebp/scripts/: CMakeLists.txt  cloneWebp.sh
android/native/dynamicLoading/: README.md  settings.gradle
android/native/dynamicLoading/app/: build.gradle
android/proto-build/: build_proto_android.sh  readme.txt
android/proto-build/testApp/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/proto-build/testApp/app/src/androidTest/java/com/example/gfan/testapp/: ExampleInstrumentedTest.java
android/proto-build/testApp/app/src/main/: AndroidManifest.xml
android/proto-build/testApp/app/src/main/cpp/: native-lib.cpp
android/proto-build/testApp/app/src/main/java/com/example/gfan/testapp/: MainActivity.java
android/proto-build/testApp/app/src/main/res/layout/: activity_main.xml
android/proto-build/testApp/app/src/test/java/com/example/gfan/testapp/: ExampleUnitTest.java
android/tools/ndk_scripts/: build_ndk_samples.sh  build_samples_master.sh  build_samples_master_ndkbuild.sh
android/tools/scripts/: strip_c_comment.sh  sync-vulkan-upstream.sh  sync-vulkan-upstream2.sh
android/uriplayer/app/: CMakeLists.txt  build.gradle
android/webp/: README.md  build.gradle
android/webp/view/: CMakeLists.txt  build.gradle
cmake-scritps/ExternalProject-basic/: README.md
cmake-scritps/ExternalProject-basic/app/src/main/cpp/: CMakeLists.txt  build_it.sh
cpu/x86_64_yasm_linux/1/: compile.sh  hello.s  hello_gcc.s
cpu/x86_64_yasm_linux/2/: add.s  compile.sh  main.c
cpu/x86_64_yasm_linux/3/: add_with_subfunc.s  compile.sh  main.c
cpu/x86_64_yasm_linux/4/: add_sub64.s  compile.sh  main.c
nnapi/basic/app/: build.gradle
nnapi/basic/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
nnapi/gradle/wrapper/: gradle-wrapper.properties
openFrameworks/reactnative/: package.json
openFrameworks/v_0.10.0/examples/android/androidAdvanced3DExample/src/: CMakeLists.txt
openFrameworks/v_0.10.0/examples/android/androidEmptyExample/src/: CMakeLists.txt
openFrameworks/v_0.10.0/libs/openFrameworks/: CMakeLists.txt
openFrameworks/v_0.10.0/libs/openFrameworks/gl/: ofFbo.cpp  ofTexture.cpp
openFrameworks/v_0.10.0/libs/openFrameworks/types/: ofParameterGroup.cpp
openFrameworks/v_0.10.0/libs/openFrameworks/utils/: ofURLFileLoader.cpp
openFrameworks/v_0.10.0/scripts/android/: clean-build.sh  pull_from_source.sh  remove_libs.sh
python/python-ctypes/: .gitignore  main.py
python/python-ctypes/cmodule/: build_module.sh  example.c
staging/hello-yasm/app/: CMakeLists.txt  build.gradle
staging/hello-yasm/app/src/main/: AndroidManifest.xml
staging/hello-yasm/app/src/main/cpp/: native-lib.cpp  yasm_compute.asm
staging/hello-yasm/app/src/main/java/com/google/sample/hello_yasm/: YasmMainActivity.java
staging/hello-yasm/app/src/main/res/layout/: yasm_main.xml
staging/hello-yasm/app/src/main/res/values/: strings.xml
staging/hello-yasm/gradle/wrapper/: gradle-wrapper.properties
(+340 files in other folders)
